--- a/public/capture.html
+++ b/public/capture.html
@@ -9,6 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- TODO: Replace with actual chrome extension id -->
     <link rel="shortcut icon" href="chrome-extension://oohanjbnalafhealllfehgakolbbekco/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
